# cifar

./: .gitignore  PROTOTYPE.md  README.md  VERSION.md  calculate_alpha.py  calibrate_model.py  calibration.py  check.py  compute_statistics.py  explore.py  inference.py  main.py  plot_baseline_criteria.py  plot_model_comparison.py  plot_specific_baselines.py  pyproject.toml  report.typ  stacking.py  train.py
experiments/: EXPERIMENT.md  EXPERIMENTS2.md
legacy/: baseline_adagrad_crossentropy_bs16_ep24_lr0.001_mom0.9.pth  baseline_adagrad_crossentropy_bs16_ep24_lr0.001_mom0.9_history.json  baseline_adam_crossentropy_bs16_ep24_lr0.001_mom0.9.pth  baseline_adam_crossentropy_bs16_ep24_lr0.001_mom0.9_schexponentiallr_gamma0.95_history.json  baseline_adam_crossentropy_bs16_ep24_lr0.001_mom0.9_schonecyclelr.pth  baseline_adam_crossentropy_bs16_ep24_lr0.001_mom0.9_schreducelronplateau_factor0.1_patience3.pth  baseline_adam_crossentropy_bs16_ep24_lr0.001_mom0.9_schreducelronplateau_factor0.1_patience3_history.json  baseline_adamw_crossentropy_bs16_ep24_lr0.001_mom0.9_wd0.0005_history.json  baseline_sgd_crossentropy_bs16_ep24_lr0.0005_mom0.9_history.json  baseline_sgd_crossentropy_bs16_ep24_lr0.001_mom0.9_calibrated_temperature.json  baseline_sgd_crossentropy_bs16_ep24_lr0.001_mom0.9_cifar_normalize_history.json  baseline_sgd_crossentropy_bs16_ep24_lr0.001_mom0.9_history.json  baseline_sgd_crossentropy_bs16_ep24_lr0.001_mom0.9_ls0.1.pth  baseline_sgd_crossentropy_bs16_ep24_lr0.001_mom0.9_ls0.1_history.json  baseline_sgd_crossentropy_bs16_ep24_lr0.005_mom0.9_history.json
models/: baseline.py  baseline2.py  baseline_bn.py  convnext_step1_patchify.py  convnext_step2_local_block.py  convnext_step3_full.py  convnextv2.py  cvt.py  cvt_cifar.py  deep_baseline.py  deep_baseline2_bn.py  deep_baseline2_bn_preact.py  deep_baseline2_bn_residual.py  deep_baseline2_bn_residual_grn.py  deep_baseline2_bn_residual_preact.py  deep_baseline2_bn_residual_se.py  deep_baseline2_bn_resnext.py  deep_baseline3_bn.py  deep_baseline3_bn_residual.py  deep_baseline3_bn_residual_15.py  deep_baseline3_bn_residual_15_attention.py  (+43 more)
(+113 files in other folders)
