[project]
name = "cifar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.3.1",
    "torchvision==0.18.1",
    "tqdm>=4.67.1",
    "numpy==1.26.4",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.0",
    "torchsummary>=1.5.1",
    "torchviz>=0.0.3",
    "setuptools>=80.9.0",
    "timm>=1.0.22",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
